--- a/dashboard.html
+++ b/dashboard.html
@@ -32,50 +32,45 @@
 
     ul.menu {
       list-style: none;
-      display: flex;
-      gap: 20px;
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background: #004080;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      padding: 10px 0;
       margin: 0;
-      padding: 0;
+      z-index: 1000;
     }
-
+    ul.menu.active {
+      display: flex;
+    }
     ul.menu li a {
       color: white;
       text-decoration: none;
+      padding: 10px 20px;
+      display: block;
       font-weight: 500;
+    }
+    ul.menu li a:hover {
+      background: rgba(255,255,255,0.1);
     }
 
     .hamburger {
-      display: none;
+      display: flex;
       flex-direction: column;
       cursor: pointer;
+      background: none;
+      border: none;
+      padding: 0;
     }
-
     .hamburger div {
       width: 25px;
       height: 3px;
       background: white;
       margin: 4px 0;
-    }
-
-    @media (max-width: 768px) {
-      ul.menu {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        background: #004080;
-        width: 100%;
-        padding: 10px 0;
-      }
-
-      ul.menu.active {
-        display: flex;
-      }
-
-      .hamburger {
-        display: flex;
-      }
     }
 
     /* Main Content */
@@ -119,70 +114,107 @@
       padding: 20px;
     }
     .quiz-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-  margin-top: 20px;
-  margin-bottom: 40px;
-}
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      margin-top: 20px;
+      margin-bottom: 40px;
+    }
 
-.manual-btn {
-  background-color: #1976d2;
-  color: white;
-  font-weight: bold;
-  padding: 18px 20px;
-  border-radius: 12px;
-  text-align: center;
-  min-width: 320px;
-  flex: 1 1 320px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.13);
-  cursor: pointer;
-  border: none;
-  font-size: 1.15rem;
-  margin-bottom: 0;
-  margin-top: 0;
-  transition: background 0.2s, box-shadow 0.2s;
-  display: block;
-}
+    .manual-btn {
+      background-color: #1976d2;
+      color: white;
+      font-weight: bold;
+      padding: 18px 20px;
+      border-radius: 12px;
+      text-align: center;
+      min-width: 320px;
+      flex: 1 1 320px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.13);
+      cursor: pointer;
+      border: none;
+      font-size: 1.15rem;
+      margin-bottom: 0;
+      margin-top: 0;
+      transition: background 0.2s, box-shadow 0.2s;
+      display: block;
+    }
 
-.manual-btn:hover {
-  background-color: #125ca4;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
-}
+    .manual-btn:hover {
+      background-color: #125ca4;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+    }
     .profile-section.flex-container {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start; /* Align to the left */
-  gap: 2rem;
-  margin-bottom: 2rem;
-  padding: 0 20px; /* Optional: add some padding if needed */
-}
-.history-btn {
-  background-color: #1976d2;
-  color: white;
-  font-weight: bold;
-  padding: 18px 20px;
-  border-radius: 12px;
-  text-align: center;
-  min-width: 180px; /* Adjust as needed */
-  box-shadow: 0 2px 8px rgba(0,0,0,0.13);
-  cursor: pointer;
-  border: none;
-  font-size: 1.15rem;
-  transition: background 0.2s, box-shadow 0.2s;
-  text-decoration: none;
-  display: inline-block;
-}
-.history-btn:hover {
-  background-color: #125ca4;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
-}
-.avatar-container.text-center {
-  text-align: center;
-}
-
-
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 2rem;
+      margin-bottom: 2rem;
+      padding: 0 20px;
+    }
+    .history-btn {
+      background-color: #1976d2;
+      color: white;
+      font-weight: bold;
+      padding: 18px 20px;
+      border-radius: 12px;
+      text-align: center;
+      min-width: 180px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.13);
+      cursor: pointer;
+      border: none;
+      font-size: 1.15rem;
+      transition: background 0.2s, box-shadow 0.2s;
+      text-decoration: none;
+      display: inline-block;
+    }
+    .history-btn:hover {
+      background-color: #125ca4;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+    }
+    .avatar-container.text-center {
+      text-align: center;
+    }
+    .d-flex {
+      display: flex;
+      align-items: center;
+    }
+    .me-3 {
+      margin-right: 1rem;
+    }
+    .alert-danger {
+      color: #721c24;
+      background-color: #f8d7da;
+      border-color: #f5c6cb;
+      padding: 15px;
+      margin-bottom: 20px;
+      border: 1px solid transparent;
+      border-radius: 4px;
+      text-align: center;
+    }
+    .d-none {
+      display: none !important;
+    }
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 15px;
+    }
+    .py-4 {
+      padding-top: 1.5rem;
+      padding-bottom: 1.5rem;
+    }
+    .mb-3 {
+      margin-bottom: 1rem;
+    }
+    .d-grid {
+      display: grid;
+      gap: 1rem;
+    }
+    .gap-2 {
+      gap: 1rem;
+    }
   </style>
 </head>
 <body>
@@ -190,50 +222,107 @@
 <header>
   <nav>
     <div class="logo">IR-LDCE</div>
-   <!-- Firebase SDK (Make sure to include this in your page) -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+    <script>
+      const firebaseConfig = {
+        apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+        authDomain: "quiz-app-1b48b.firebaseapp.com",
+        projectId: "quiz-app-1b48b",
+        appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
+      };
+      firebase.initializeApp(firebaseConfig);
+    </script>
+    <style>
+      .btn-white-black {
+        background-color: white;
+        color: black;
+        border: 1px solid #ccc;
+        font-weight: bold;
+        border-radius: 6px;
+        padding: 6px 12px;
+        transition: background-color 0.3s, color 0.3s;
+        text-decoration: none;
+        display: inline-block;
+      }
+      .btn-white-black:hover {
+        background-color: #f0f0f0;
+        color: #000;
+      }
+    </style>
+    <div class="d-flex align-items-center">
+      <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
+      <button id="logoutButton" class="btn btn-sm btn-white-black" style="display: none;">Logout</button>
+    </div>
+    <button class="hamburger" id="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </button>
+    <ul class="menu" id="navMenu">
+      <li><a href="index.html">🏠 Home</a></li>
+      <li><a href="categories.html">📐 MCQ Categories</a></li>
+      <li><a href="manual-quizzes.html">📊 Manual Based MCQ</a></li>
+      <li><a href="pyq-quizzes.html">📄 PYQ Based MCQ</a></li>
+      <li><a href="establishment.html">🔄 Establishment MCQ</a></li>
+      <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
+      <li><a href="gk.html">💡 General Knowledge</a></li>
+    </ul>
+  </nav>
+</header>
 
-<!-- Firebase Configuration -->
+<main class="dashboard-container container py-4">
+  <div id="error-message" class="alert alert-danger text-center d-none">
+    You are not logged in. <a href="login.html">Go to login</a>
+  </div>
+  <section class="profile-section flex-container">
+    <div class="avatar-container text-center">
+      <div class="mb-2">
+        <img id="userAvatar" src="default-avatar.png" alt="Profile Picture" class="rounded-circle" width="100" height="100" />
+      </div>
+      <div class="profile-info">
+        <h2>Welcome, <span id="dashboard-username">User</span>!</h2>
+        <p>Email: <span id="account-email">user@example.com</span></p>
+      </div>
+    </div>
+    <a href="quiz-history.html" class="manual-btn history-btn">Quiz History</a>
+  </section>
+
+  <section class="dashboard-section" id="quiz-section">
+    <div style="text-align: center;">
+      <h3 class="mb-3" style="font-size: 2rem;">Available Quizzes</h3>
+    </div>
+    <div class="quiz-list d-grid gap-2">
+      <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
+      <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
+      <button class="manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
+      <button class="manual-btn" data-manual="irec">4. Indian Railway Engineering Code</button>
+      <button class="manual-btn" data-manual="stm">5. Small Track Machine Manual</button>
+      <button class="manual-btn" data-manual="usfd">6. USFD Manual</button>
+      <button class="manual-btn" data-manual="fbwm">7. FBW Manual</button>
+      <button class="manual-btn" data-manual="store">8. Store Manual</button>
+      <button class="manual-btn" data-manual="account">9. Account Manual</button>
+      <button class="manual-btn" data-manual="pyq2022">10. PYQ 30% Main 2022</button>
+      <button class="manual-btn" data-manual="pyq2021">11. PYQ 30% Main 2021</button>
+    </div>
+  </section>
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="dashboard.js"></script>
+<footer>
+  &copy; 2025 IR-LDCE. All Rights Reserved.
+</footer>
+
 <script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
-    authDomain: "quiz-app-1b48b.firebaseapp.com",
-    projectId: "quiz-app-1b48b",
-    appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
-  };
-  firebase.initializeApp(firebaseConfig);
-</script>
+  // Toggle menu on hamburger click
+  document.getElementById('hamburger').addEventListener('click', function() {
+    document.getElementById('navMenu').classList.toggle('active');
+  });
 
-<!-- UI Section -->
-<style>
-  .btn-white-black {
-    background-color: white;
-    color: black;
-    border: 1px solid #ccc;
-    font-weight: bold;
-    border-radius: 6px;
-    padding: 6px 12px;
-    transition: background-color 0.3s, color 0.3s;
-    text-decoration: none;
-    display: inline-block;
-  }
-
-  .btn-white-black:hover {
-    background-color: #f0f0f0;
-    color: #000;
-  }
-</style>
-
-<div class="d-flex align-items-center">
-  <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
-  <button id="logoutButton" class="btn btn-sm btn-white-black" style="display: none;">Logout</button>
-</div>
-
-<!-- Auth State Handling -->
-<script>
+  // Auth State Handling
   const auth = firebase.auth();
-
   const loginLink = document.getElementById("loginLink");
   const logoutButton = document.getElementById("logoutButton");
 
@@ -256,73 +345,6 @@
       console.error("Sign out error", error);
     });
   });
-</script>
-
-    <div class="hamburger" onclick="toggleMenu()">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <ul class="menu" id="navMenu">
-      <li><a href="index.html"> 🏠 Home</a></li>
-      <li><a href="categories.html"> 📐 MCQ Categories</a></li>
-      <li><a href="manual-quizzes.html"> 📊 Manual Based MCQ</a></li>
-      <li><a href="pyq-quizzes.html"> 📄 PYQ Based MCQ</a></li>
-      <li><a href="establishment.html"> 🔄 Establishment MCQ</a></li>
-      <li><a href="current-affairs.html"> 🌐 Current Affairs</a></li>
-      <li><a href="gk.html"> 💡 General Knowledge</a></li>
-    </ul>
-  </nav>
-</header>
-
-  <!-- DASHBOARD CONTENT -->
-  <main class="dashboard-container container py-4">
-    <div id="error-message" class="alert alert-danger text-center d-none">
-      You are not logged in. <a href="login.html">Go to login</a>
-    </div>
-    <section class="profile-section flex-container">
-  <div class="avatar-container text-center">
-    <div class="mb-2">
-      <img id="userAvatar" src="default-avatar.png" alt="Profile Picture" class="rounded-circle" width="100" height="100" />
-    </div>
-    <div class="profile-info">
-      <h2>Welcome, <span id="dashboard-username">User</span>!</h2>
-      <p>Email: <span id="account-email">user@example.com</span></p>
-    </div>
-  </div>
-  <a href="quiz-history.html" class="manual-btn history-btn">Quiz History</a>
-</section>
-
-    <section class="dashboard-section" id="quiz-section">
-     <div style="text-align: center;">
-  <h3 class="mb-3" style="font-size: 2rem;">Available Quizzes</h3>
-</div>
-  <div class="quiz-list d-grid gap-2">
-        <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
-        <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
-        <button class="manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
-        <button class="manual-btn" data-manual="irec">4. Indian Railway Engineering Code</button>
-        <button class="manual-btn" data-manual="stm">5. Small Track Machine Manual</button>
-        <button class="manual-btn" data-manual="usfd">6. USFD Manual</button>
-        <button class="manual-btn" data-manual="fbwm">7. FBW Manual</button>
-        <button class="manual-btn" data-manual="store">8. Store Manual</button>
-        <button class="manual-btn" data-manual="account">9. Account Manual</button>
-        <button class="manual-btn" data-manual="pyq2022">10. PYQ 30% Main 2022</button>
-        <button class="manual-btn" data-manual="pyq2021">11. PYQ 30% Main 2021</button>
-      </div>
-    </section>
-  </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="dashboard.js"></script>
-  <footer>
-  &copy; 2025 IR-LDCE. All Rights Reserved.
-</footer>
-
-<script>
-  function toggleMenu() {
-    document.getElementById('navMenu').classList.toggle('active');
-  }
 </script>
 </body>
 </html>
