--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,6 @@
       margin: 0;
       background-color: #f5f7fa;
     }
-
     /* Header & Navigation */
     header {
       background-color: #004080;
@@ -18,18 +17,15 @@
       padding: 15px 20px;
       position: relative;
     }
-
     nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-
     .logo {
       font-size: 1.8rem;
       font-weight: bold;
     }
-
     ul.menu {
       list-style: none;
       display: none;
@@ -57,7 +53,6 @@
     ul.menu li a:hover {
       background: rgba(255,255,255,0.1);
     }
-
     .hamburger {
       display: flex;
       flex-direction: column;
@@ -72,20 +67,17 @@
       background: white;
       margin: 4px 0;
     }
-
     /* Main Content */
     main {
       display: flex;
       flex-wrap: wrap;
       padding: 20px;
     }
-
     .content {
       flex: 3;
       min-width: 250px;
       padding: 20px;
     }
-
     .sidebar {
       flex: 1;
       min-width: 200px;
@@ -93,7 +85,6 @@
       background-color: #e0ecff;
       border-left: 20px solid #ccc;
     }
-
     .card {
       background-color: white;
       margin-bottom: 20px;
@@ -101,11 +92,9 @@
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       border-radius: 8px;
     }
-
     h2 {
       color: #004080;
     }
-
     /* Footer */
     footer {
       background-color: #004080;
@@ -113,34 +102,30 @@
       text-align: center;
       padding: 20px;
     }
+    /* Quiz List Section (Updated to match index.html) */
     .quiz-list {
       display: flex;
       flex-wrap: wrap;
-      gap: 20px;
+      gap: 15px;
       justify-content: center;
       margin-top: 20px;
       margin-bottom: 40px;
     }
-
     .manual-btn {
       background-color: #1976d2;
       color: white;
       font-weight: bold;
-      padding: 18px 20px;
-      border-radius: 12px;
+      padding: 15px 20px;
+      border-radius: 8px;
       text-align: center;
-      min-width: 320px;
-      flex: 1 1 320px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.13);
+      min-width: 240px;
+      flex: 1 1 240px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
       cursor: pointer;
       border: none;
-      font-size: 1.15rem;
-      margin-bottom: 0;
-      margin-top: 0;
+      font-size: 1rem;
       transition: background 0.2s, box-shadow 0.2s;
-      display: block;
     }
-
     .manual-btn:hover {
       background-color: #125ca4;
       box-shadow: 0 4px 16px rgba(0,0,0,0.18);
@@ -208,13 +193,6 @@
     .mb-3 {
       margin-bottom: 1rem;
     }
-    .d-grid {
-      display: grid;
-      gap: 1rem;
-    }
-    .gap-2 {
-      gap: 1rem;
-    }
   </style>
 </head>
 <body>
@@ -253,7 +231,8 @@
     </style>
     <div class="d-flex align-items-center">
       <a href="login.html" id="loginLink" class="btn btn-sm btn-white-black me-3">Login</a>
-      <button id="logoutButton" class="btn btn-sm btn-white-black" style="display: none;">Logout</button>
+      <button id="logoutButton" class="btn btn-sm btn-white-black me-3" style="display: none;">Logout</button>
+      <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
     </div>
     <button class="hamburger" id="hamburger">
       <div></div>
@@ -268,6 +247,7 @@
       <li><a href="establishment.html">🔄 Establishment MCQ</a></li>
       <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
       <li><a href="gk.html">💡 General Knowledge</a></li>
+      <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
     </ul>
   </nav>
 </header>
@@ -293,7 +273,7 @@
     <div style="text-align: center;">
       <h3 class="mb-3" style="font-size: 2rem;">Available Quizzes</h3>
     </div>
-    <div class="quiz-list d-grid gap-2">
+    <div class="quiz-list">
       <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
       <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
       <button class="manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
@@ -325,15 +305,21 @@
   const auth = firebase.auth();
   const loginLink = document.getElementById("loginLink");
   const logoutButton = document.getElementById("logoutButton");
+  const dashboardLink = document.getElementById("dashboardLink");
+  const mobileDashboardLink = document.getElementById("mobileDashboardLink");
 
   // Listen for auth state changes
   auth.onAuthStateChanged((user) => {
     if (user) {
       loginLink.style.display = "none";
       logoutButton.style.display = "inline-block";
+      dashboardLink.style.display = "inline-block";
+      mobileDashboardLink.style.display = "inline";
     } else {
       loginLink.style.display = "inline";
       logoutButton.style.display = "none";
+      dashboardLink.style.display = "none";
+      mobileDashboardLink.style.display = "none";
     }
   });
 
