--- a/pyq-quizzes.html
+++ b/pyq-quizzes.html
@@ -233,8 +233,8 @@
       <button class="manual-btn" data-manual="fbwm" aria-label="Start quiz for FBW Manual">7. FBW Manual</button>
       <button class="manual-btn" data-manual="store" aria-label="Start quiz for Store Manual">8. Store Manual</button>
       <button class="manual-btn" data-manual="account" aria-label="Start quiz for Account Manual">9. Account Manual</button>
-      <button class="btn-outline-primary manual-btn" data-manual="pyq2022" aria-label="Start quiz for 2022 30% Main">10. PYQ 30% Main 2022</button>
-      <button class="btn-outline-primary manual-btn" data-manual="pyq2021">11. PYQ 30% Main 2021</button>
+      <button class="manual-btn" data-manual="pyq2022" aria-label="Start quiz for 2022 30% Main">10. PYQ 30% Main 2022</button>
+      <button class="manual-btn" data-manual="pyq2021" aria-label="Start quiz for 2021 30% Main">11. PYQ 30% Main 2021</button>
     </div>
   </div>
 </div>
